# Mysanthropy1

./: .gitattributes  CMakeLists.txt  README.md  TestGame.cpp  TestGame.h  TestObject.cpp  TestObject.h  compile.bat  compileAndRun.bat  configure.bat  editor.bat  game.bat  gamemain.cpp  main.cpp
AdvancedTutorial/: AdvancedTutorial.cpp  AdvancedTutorial.h  GrassObject.cpp  ScreenQuad.cpp  ScreenQuad.h  SimplePlane.cpp  SimplePlane.h  Skybox.cpp  Skybox.h
LightingTutorial/: LampObject.cpp  LampObject.h  LightingTutorial.cpp  LightingTutorial.h  SimpleCube.cpp  SimpleCube.h
ModelTutorial/: ModelTutorial.cpp  ModelTutorial.h
TileGame/: BattleSystem.cpp  BattleSystem.hpp  CombatAbilityLists.cpp  CombatAbilityLists.hpp  CombatUnit.cpp  CombatUnit.h  CombatUnit.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  Entity.cpp  Entity.h  Entity.hpp  Image2D.cpp  Image2D.h  Image2D.hpp  Inventory.cpp  Inventory.h  Inventory.hpp  Item.cpp  Item.h  Item.hpp  MobSpawner.cpp  MobSpawner.hpp  MobSprite.cpp  MobSprite.hpp  Player.cpp  Player.h  PlayerCombatUnit.cpp  PlayerCombatUnit.hpp  PlayerCommand.h  PlayerCommand.hpp  PlayerData.cpp  PlayerData.h  PlayerData.hpp  PlayerSprite.cpp  PlayerSprite.h  PlayerSprite.hpp  SaveData.cpp  SaveData.h  (+31 more)
TileGame/combat/: Formula.hpp
demos/: TestGame.h  TestObject.cpp  TestObject.h
demos/AdvancedTutorial/: AdvancedTutorial.cpp  AdvancedTutorial.h  GrassObject.h  InstanceTutorial.cpp  InstanceTutorial.h  SimplePlane.cpp  Sprite.cpp  Sprite.h
demos/LightingTutorial/: LampObject.cpp  LightingTutorial.cpp  SimpleCube.h
demos/ModelTutorial/: ModelTutorial.cpp  ModelTutorial.h
demos/SoundTest/: SoundTest.cpp  SoundTest.h
docs/: outline.odt  tilegamebook.odt
engine/: Camera.cpp  Camera.h  CircleShape.cpp  CircleShape.h  EventListeners.h  Game.h  GameEngine.cpp  GameEngine.h  GameEngine.hpp  GameObject.h  GraphicsContext.cpp  GraphicsContext.h  Logger.cpp  Logger.h  Logger.hpp  Material.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  RectangleShape.cpp  RectangleShape.h  RectangleShape.hpp  Shape.h  Shape.hpp  SoundManager.cpp  SoundManager.h  SoundManager.hpp  TextRenderer.cpp  TextRenderer.h  TextRenderer.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp
engine/ui/: Button.cpp  Button.h  Button.hpp  Color.h  Event.h  Event.hpp  Frame.cpp  Frame.h  Label.cpp  Label.h  Label.hpp  LuaBindings.cpp  LuaBindings.h  LuaBindings.hpp  Object.cpp  Object.h  Object.hpp  Root.cpp  Root.h  Root.hpp  Slider.cpp  Slider.h  Slider.hpp  TextField.cpp  TextField.h  Texture.cpp  Texture.h  Texture.hpp
ogl/: ElementBuffer.cpp  ElementBuffer.h  ErrorCheck.cpp  ErrorCheck.h  ErrorCheck.hpp  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Program.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  Vertex.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
res/config/: abilities.lua  animations.lua  buildings.lua  combatclasses.lua  crafting.lua  equipment.lua  gameconfig.lua  inventory.lua  items.lua  statuseffects.lua
res/music/: CREDITS.txt
res/shaders/: atshader.frag  atshader.fs  atshader.vs  basic.frag  basic.fs  lighting.frag  lighting.fs  lighting.vs  model.frag  model.fs  model.vs  screen.frag  screen.vs  skybox.frag  skybox.vs  spriteshader.fs  spriteshader.vs  stencils.vs  tutorial.gs
res/sounds/: CREDITS.txt
res/tilemaps/: island.lua
src/: CMakeLists.txt
src/combat/: Ability.hpp  AbilityTable.cpp  AbilityTable.hpp  AbilityTables.cpp  AbilityTables.hpp  Animation.cpp  Animation.hpp  AnimationEntry.cpp  AnimationEntry.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AnimationTable.cpp  AnimationTable.hpp  Attribute.cpp  Attribute.hpp  AttributeSheet.cpp  AttributeSheet.hpp  Attributes.hpp  Battle.cpp  Battle.hpp  BattleSystem.cpp  BattleSystem.hpp  CharacterSheet.cpp  CharacterSheet.hpp  CombatAbilityLists.cpp  CombatAbilityLists.hpp  CombatClassEntry.hpp  CombatClassTable.cpp  CombatClassTable.hpp  CombatUnit.cpp  CombatUnit.hpp  Equipment.cpp  Equipment.hpp  EquipmentEntry.hpp  EquipmentTable.cpp  EquipmentTable.hpp  Formula.cpp  Formula.hpp  NumericRange.cpp  NumericRange.hpp  (+11 more)
src/editor/: TileEditor.cpp  TileEditor.hpp  main.cpp
src/engine/: Camera.cpp  Camera.hpp  CircleShape.hpp  EventListeners.hpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  GameObject.hpp  GameObject2D.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Model.cpp  Model.hpp  RectangleShape.cpp  SoundManager.cpp  TextRenderer.cpp  TextRenderer.hpp  TextureManager.cpp
src/engine/ui/: Button.cpp  Color.hpp  Frame.hpp  Label.cpp  LuaBindings.cpp  Object.cpp  Root.cpp  TextField.cpp  TextField.hpp
src/game/: Building.cpp  Building.hpp  BuildingEntry.hpp  BuildingOutline.cpp  BuildingOutline.hpp  BuildingTable.cpp  BuildingTable.hpp  Configuration.cpp  Configuration.hpp  Craftable.hpp  Crafting.cpp  Crafting.hpp  CraftingSystem.cpp  CraftingSystem.hpp  Entity.cpp  Entity.hpp  Harvesting.cpp  Harvesting.hpp  Inventory.cpp  Inventory.hpp  IsleGame.cpp  IsleGame.hpp  Item.cpp  Item.hpp  ItemEntry.cpp  ItemEntry.hpp  ItemTable.cpp  ItemTable.hpp  Keybinds.cpp  Keybinds.hpp  LootTable.hpp  MobSpawner.cpp  MobSpawner.hpp  MobSprite.cpp  MobSprite.hpp  Persistence.cpp  Persistence.hpp  PlayerCommand.hpp  PlayerSprite.cpp  PlayerSprite.hpp  (+17 more)
src/ogl/: ElementBuffer.hpp  FrameBuffer.hpp  Shader.cpp  Texture.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/world/: TileMap.cpp  TileMap.hpp  TileSet.cpp  TileSet.hpp
ui/: IsleGame.lua  TileEditor.lua  TileGame.lua  advancedtutorial.lua  fonts.lua  instancetutorial.lua  main.lua  test.lua  window.lua
ui/islegame/: ActionBar.lua  BuildTable.lua  BuildingFrame.lua  CastBar.lua  Console.lua  CraftingFrame.lua  DataBar.lua  ExperienceBar.lua  Fonts.lua  GameButton.lua  GameFrame.lua  InventoryFrame.lua  ItemTable.lua  StringX.lua  Textures.lua  UnitFrame.lua  main.lua
ui/lib/: Window.lua  fonts.lua  keycodes.lua
